<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/cardUser"
        layout="@layout/layout_card_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitlePeopleInDanger"
        style="@style/mediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:text="@string/titleDangerHome"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/ic_notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardUser" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPeopleInDanger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitlePeopleInDanger"
        tools:listitem="@layout/model_people_in_danger" />

    <TextView
        android:id="@+id/tvTitleRelative"
        style="@style/mediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/relative"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvPeopleInDanger" />

    <TextView
        android:id="@+id/tvSeeAll"
        style="@style/normalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:clickable="true"
        android:focusable="true"
        tools:text="@string/see_all"
        android:textColor="@color/btn_blue"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitleRelative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTitleRelative" />


    <include
        android:id="@+id/layoutEmptyRelative"
        layout="@layout/layout_empty_relative"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleRelative" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRelative"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:background="@color/white"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleRelative"
        tools:listitem="@layout/model_relative" />




    <ImageView
        android:id="@+id/ivAnim2"
        style="@style/panicBtn"
        android:src="@drawable/effect_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivAnim1"
        style="@style/panicBtn"
        android:src="@drawable/effect_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/btnPanic"
        style="@style/AppTheme.ButtonStyle"
        android:text="@string/txt_panic_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <include
        android:id="@+id/layoutLoading"
        layout="@layout/layout_loading_welcome"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>